[project]
name = "acustic-emission-analysis"
version = "0.1"
description = "A updated and adjusted forked project for importing acoustic emission analysis data."
authors = [
    { name = "Christoph Renzing", email = "christoph.renzing@imf.tu-freiberg.de" },
]
license = "BSD-3-Clause"
requires-python = ">=3.9, <4.0"
dependencies = [
    "jupyter",
    "jupyterlab",
    "ipympl",
    "pandas",
    "numpy",
    "scipy",
    "wave",
    "matplotlib",
    "tqdm"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true
